# vscode-youwant-workspace

./: .eslintrc.json  CHANGELOG.md  README.md  package copy.json  package-lock.json  package.json  package.nls.zh-cn.json
assets/languages/cmake-c/: CMakeLists.txt  main.c
assets/languages/cmake-cpp/: CMakeLists.txt  main.cpp
assets/languages/cmake-qt-cli/: CMakeLists.txt  main.cpp
assets/languages/cmake-qt-gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/: configuration.ts  extension.ts  menus.ts  native_template.ts  remote_template.ts  template.ts  workbench.ts  workspace.ts
src/actions/: actions.ts  designed.ts
